tests/type_args_strict/type_args_strict.exp
Error: test.js:21
 21: var c: MyClass = new MyClass(0); // error, missing argument list (1)
            ^^^^^^^ MyClass. Application of polymorphic type needs <list of 1 argument>. (Can use `*` for inferrable ones)

Error: test.js:34
 34: var c2: MyClass2 = new MyClass2(0, ""); // error, missing argument list (1-2)
             ^^^^^^^^ MyClass2. Application of polymorphic type needs <list of 1-2 arguments>. (Can use `*` for inferrable ones)

Error: test.js:42
 42: var o: MyObject = { x: 0 }; // error, missing argument list
            ^^^^^^^^ MyObject. Application of polymorphic type needs <list of 1 argument>. (Can use `*` for inferrable ones)

Error: test.js:46
 46: type MySubobject = { y: number } & MyObject; // error, missing argument list
                                        ^^^^^^^^ MyObject. Application of polymorphic type needs <list of 1 argument>. (Can use `*` for inferrable ones)

Error: test.js:54
 54: interface MySubinterface extends MyInterface { // error, missing argument list
                                      ^^^^^^^^^^^ MyInterface. Application of polymorphic type needs <list of 1 argument>. (Can use `*` for inferrable ones)

Error: test.js:60
 60: class MySubclass extends MyClass { // error, missing argument list
                              ^^^^^^^ MyClass. Too few type arguments. Expected at least 1
 14: class MyClass<T> {
                   ^ See type parameters of definition here

Error: test.js:69
 69: class MySubclass2 extends MyClass3 { } // error, missing argument list
                               ^^^^^^^^ MyClass3. Too few type arguments. Expected at least 1
 67: class MyClass3<X, Y = void> { }
                    ^^^^ See type parameters of definition here

Error: test.js:79
 79: var poly: MyClass<> = new MyClass; // error, too few arguments
               ^^^^^^^^^ MyClass. Too few type arguments. Expected at least 1
 14: class MyClass<T> {
                   ^ See type parameters of definition here

Error: test.js:83
 83: var mono: MyClass4<> = new MyClass4; // error, class is not polymorphic
                            ^^^^^^^^^^^^ MyClass4. Expected polymorphic type instead of
 83: var mono: MyClass4<> = new MyClass4; // error, class is not polymorphic
               ^^^^^^^^^^ statics of `MyClass4`


Found 9 errors
